# MyBCopy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Settings.ini  src.txt
CMake/: Utils.cmake
cli/: CMakeLists.txt  cli_main.cpp  cli_pch.cpp  cli_pch.h
gui/qt/: BackupEditor.cpp  BackupEditor.h  BackupEditor.ui  BackupModel.cpp  BackupModel.h  CMakeLists.txt  DepthEditor.cpp  DepthEditor.h  DepthEditor.ui  FilterEditor.cpp  FilterEditor.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ModelIterator.cpp  ModelIterator.h  ProgressViewer.cpp  ProgressViewer.h  ProgressViewer.ui  RegexpFilterEditor.cpp  RegexpFilterEditor.h  RegexpFilterEditor.ui  SchemeFrame.cpp  SchemeFrame.h  SchemeFrame.ui  SettingsEditor.cpp  SettingsEditor.h  SettingsEditor.ui  StorageEditorDialog.cpp  StorageEditorDialog.h  StorageEditorDialog.ui  StorageFrame.cpp  StorageFrame.h  StorageFrame.ui  ToolChainFrame.cpp  ToolChainFrame.h  ToolChainFrame.ui  ToolEditorDialog.cpp  ToolEditorDialog.h  ToolEditorDialog.ui  (+28 more)
src/: AbstrastIOManager.cpp  AbstrastIOManager.h  BackupBase.cpp  BackupBase.h  BackupJobExecuter.cpp  BackupJobExecuter.h  CMakeLists.txt  Completer.cpp  Completer.h  Exceptions.cpp  Exceptions.h  Filters.cpp  Filters.h  HDDManager.cpp  HDDManager.h  InternetIOManager.cpp  InternetIOManager.h  LocalDiskIOManager.cpp  LocalDiskIOManager.h  MyBCopy.h  MyBCopy_config.h  MyBCopy_main.cpp  MyBCopy_pch.cpp  MyBCopy_pch.h  MyBCopy_pch_ThirdParty.h  MyBCopy_pch_Win.h  MyRCopy.cpp  MyRCopy.sln  MyRCopy.vcxproj  MyRCopy.vcxproj.filters  ParsedSources.cpp  ParsedSources.h  Reserver.cpp  Reserver.h  Storage.cpp  Storage.h  ThreadedEventLoop.cpp  ThreadedEventLoop.h  Tool.cpp  Tool.h  (+19 more)
tests/BlackBox/: BlackBoxTest.cpp  BlackBoxTest.h  BlackBoxTest_in.mybcopy  BlackBox_config.in.h  BlackBox_consts.h  BlackBox_pch.cpp  BlackBox_pch.h  CMakeLists.txt  main.cpp
